# survey

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  index.html  pyproject.toml
data/: database.db  us_ai_survey_unique_50.csv
frontend/: index.html
frontend/css/: filters.css  style.css  table.css
frontend/js/: boxPlot.js  main.js  map.js  rowChart.js  scatterPlot.js
scripts/: setup_db.py
src/backend/: api.py  db_utils.py  survey.py
teraform/: main.tf
